--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,10 @@
 <head>
   <title>App</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
     }
@@ -11,7 +15,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="sample.js"></script>
 </body>
 
 </html>
